--- a/app/src/main/res/layout/crop_irrigation_list_card.xml
+++ b/app/src/main/res/layout/crop_irrigation_list_card.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray"
+    android:background="#F4F4F4"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,16 +12,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="0.9"
             android:orientation="vertical">
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="16dp"
-                android:background="@color/black"
-                android:textAlignment="center" />
+
 
             <ImageView
                 android:layout_width="36dp"
@@ -34,7 +29,7 @@
                 android:layout_width="1dp"
                 android:layout_height="260dp"
                 android:layout_marginStart="16dp"
-                android:background="@color/black"
+                android:background="#E7EAE7"
                 android:textAlignment="center" />
 
         </LinearLayout>
@@ -43,23 +38,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
+            android:paddingRight="20dp"
+            android:paddingBottom="20dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txt_view_crop_irrigation_card_operation_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginBottom="8dp"
                 android:text="20-08-2018"
                 android:textSize="18sp"
-                android:textColor="@color/blackText" />
+                android:textColor="#A6C0A7" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:background="@drawable/black_border"
+                android:paddingTop="10dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="25dp"
+                android:background="@drawable/input_shapes_crops_card"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -75,6 +76,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="4dp"
+                        android:layout_marginStart="24dp"
                         android:text="Irrigation"
                         android:textColor="@color/blackText"
                        android:textSize="18sp" />
@@ -97,21 +99,24 @@
 
                 </LinearLayout>
                 <View
-                    android:layout_width="match_parent"
+                    android:layout_width="240dp"
                     android:layout_height="1dp"
-                    android:background="@color/black"
-                    />
+                    android:layout_marginStart="20dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="#D2D3D2" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_margin="0dp"
-                    android:padding="8dp">
+                    android:padding="4dp">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Area : "
+                        android:layout_marginStart="28dp"
+                        android:layout_weight="1"
                         android:textColor="@color/blackText"
                         android:textSize="14sp" />
 
@@ -119,25 +124,24 @@
                         android:id="@+id/txt_crop_irrigation_card_irrigated_area"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="(2.5 ha)"
-                        android:textColor="@color/blackText" />
+                        android:textColor="#899889" />
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                     />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_margin="0dp"
-                    android:padding="8dp">
+                    android:padding="4dp">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Duration : "
+                        android:layout_marginStart="28dp"
+                        android:layout_weight="1"
                         android:textColor="@color/blackText"
                        android:textSize="14sp" />
 
@@ -145,27 +149,23 @@
                         android:id="@+id/txt_view_crop_irrigation_card_duration"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:layout_weight="1"
                         android:text="100 l/hr"
-                        android:textColor="@color/blackText" />
+                        android:textColor="#899889" />
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                    />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_margin="0dp"
-                    android:padding="8dp">
+                    android:padding="4dp">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:layout_marginStart="28dp"
+                        android:layout_weight="1"
                         android:text="Rate : "
                         android:textColor="@color/blackText"
                        android:textSize="14sp" />
@@ -174,84 +174,76 @@
                         android:id="@+id/txt_view_crop_irrigation_card_system_rate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:layout_weight="1"
                         android:text="56kg/ha"
-                        android:textColor="@color/blackText" />
+                        android:textColor="#899889" />
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                    />
                 <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_margin="0dp"
-                        android:padding="8dp"
+                        android:padding="4dp"
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Water Quantity : "
+                            android:layout_marginStart="28dp"
+                            android:layout_weight="1"
                             android:textColor="@color/blackText"
                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/txt_view_crop_irrigation_card_total_water_quantity"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:text="300 ltrs "
-                            android:textColor="@color/blackText" />
+                            android:textColor="#899889" />
                     </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                    />
+
                 <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:orientation="horizontal"
                         android:layout_margin="0dp"
-                        android:padding="8dp"
+                        android:padding="4dp"
                     >
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="28dp"
+                            android:layout_weight="1"
                             android:text="Qty/ha : "
                             android:textColor="@color/blackText"
                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/txt_view_crop_irrigation_card_quantity_per_acre"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="10 ltrs"
-                            android:textColor="@color/blackText" />
+                            android:textColor="#899889" />
                     </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                    />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_margin="0dp"
-                    android:padding="8dp">
+                    android:padding="4dp">
 
                     <TextView
 
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:layout_marginStart="28dp"
+                        android:layout_weight="1"
                         android:text="Recurrence : "
                         android:textColor="@color/blackText"
                        android:textSize="14sp" />
@@ -262,25 +254,22 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Weekly"
-                        android:textColor="@color/blackText" />
+                        android:textColor="#899889" />
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                    />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_margin="0dp"
-                    android:padding="8dp">
+                    android:padding="4dp">
 
                     <TextView
 
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:layout_marginStart="28dp"
+                        android:layout_weight="1"
                         android:text="Cost : "
                         android:textColor="@color/blackText"
                        android:textSize="14sp" />
@@ -290,9 +279,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="end"
                         android:text="UGX 150,000"
-                        android:textColor="@color/blackText" />
+                        android:textColor="#899889" />
                 </LinearLayout>
 
             </LinearLayout>
