--- a/app/src/main/res/drawable/input_shapes_green.xml
+++ b/app/src/main/res/drawable/input_shapes_green.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="#B6C5B6" />
             <padding
                 android:bottom="2dp"
                 android:left="2dp"
@@ -17,7 +17,7 @@
                 android:left="5dp"
                 android:right="5dp"
                 android:top="5dp" />
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="#B6C5B6" />
 
 
         </shape>
