--- a/app/src/main/res/layout/activity_crop_contacts_list.xml
+++ b/app/src/main/res/layout/activity_crop_contacts_list.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F4F4F4"
     android:orientation="vertical"
     tools:context=".activities.CropContactsListActivity">
 
