--- a/app/src/main/res/layout/activity_crop_harvest_manager.xml
+++ b/app/src/main/res/layout/activity_crop_harvest_manager.xml
@@ -227,9 +227,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:text="@string/date_sold"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:textColor="@color/colorPrimary"
+            android:layout_marginBottom="4dp"
+            android:textSize="15sp"
+            android:textColor="@color/textColor"
             />
 
         <EditText
@@ -258,10 +258,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/customer"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-
-            android:textSize="16sp" />
+            android:layout_marginBottom="4dp"
+            android:textColor="@color/textColor"
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/txt_crop_harvest_customer"
@@ -286,11 +285,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/price"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-
+                    android:textColor="@color/textColor"
+                    android:layout_marginBottom="4dp"
                     android:layout_marginRight="5dp"
-                    android:textSize="16sp" />
+                    android:textSize="15sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -303,24 +301,25 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:background="@color/gray_mh">
+                        >
 
 
                         <TextView
 
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:padding="4dp"
                             android:text="@string/ugx"
+                            android:background="@drawable/input_shapes_grey_units"
                             android:gravity="center_vertical"
-                            android:textStyle="bold"
+                            android:textColor="@color/colorPrimary"
 
                             />
 
                         <EditText
                             android:id="@+id/txt_crop_harvest_price"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:background="@drawable/input_shapes"
                             android:ems="10"
                             android:hint="Enter.."
@@ -331,12 +330,12 @@
                         <TextView
                             android:id="@+id/txt_crop_harvest_price_per_unit"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:padding="4dp"
                             android:text="@string/per_unit"
                             android:gravity="center_vertical"
-                            android:textStyle="bold"
-
+                            android:background="@drawable/input_shapes_grey_units_right"
+                            android:textColor="@color/colorPrimary"
                             />
 
                     </LinearLayout>
@@ -357,10 +356,9 @@
             android:layout_height="wrap_content"
             android:text="@string/quantity_sold"
             android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-
+            android:layout_marginBottom="4dp"
             android:layout_marginRight="5dp"
-            android:textSize="16sp" />
+            android:textSize="15sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -373,7 +371,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:background="@color/gray_mh">
+                >
 
 
 
@@ -391,13 +389,13 @@
                 <TextView
                     android:id="@+id/txt_crop_harvest_sold_unit"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:padding="4dp"
                     android:layout_weight="0.8"
                     android:text="@string/units"
-                    android:gravity="center_vertical"
-                    android:textStyle="bold"
-
+                    android:gravity="center"
+                    android:textSize="14sp"
+                    android:background="@drawable/input_shapes_grey_units_right"
                     />
 
             </LinearLayout>
@@ -430,9 +428,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
                         android:text="@string/storage_date"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
-                        android:textColor="@color/colorPrimary"
+                        android:layout_marginBottom="4dp"
+                        android:textSize="15sp"
+                        android:textColor="@color/textColor"
                         />
 
                     <EditText
@@ -460,11 +458,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/quantity_stored"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-
+                        android:textColor="@color/textColor"
+                        android:layout_marginBottom="4dp"
                         android:layout_marginRight="5dp"
-                        android:textSize="16sp" />
+                        android:textSize="15sp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -477,14 +474,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:background="@color/gray_mh">
+                            >
 
 
 
                             <EditText
                                 android:id="@+id/txt_crop_harvest_quantity_stored"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
                                 android:background="@drawable/input_shapes"
                                 android:ems="10"
                                 android:hint="Enter.."
@@ -495,13 +492,13 @@
                             <TextView
                                 android:id="@+id/txt_crop_harvest_stored_unit"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
                                 android:padding="4dp"
                                 android:layout_weight="0.8"
                                 android:text="@string/units"
-                                android:gravity="center_vertical"
-                                android:textStyle="bold"
-
+                                android:gravity="center"
+                                android:background="@drawable/input_shapes_grey_units_right"
+                                android:textColor="@color/colorPrimary"
                                 />
 
                         </LinearLayout>
@@ -654,7 +651,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="5dp"
-
+                android:visibility="gone"
                 >
 
                 <LinearLayout
@@ -741,7 +738,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-
+                android:visibility="gone"
                 >
                 <EditText
                     android:id="@+id/txt_crop_harvest_days_before"
