--- a/app/src/main/res/layout/crop_contact_list_card.xml
+++ b/app/src/main/res/layout/crop_contact_list_card.xml
@@ -5,18 +5,29 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_margin="5dp"
-        android:background="@color/white"
+        android:layout_margin="15dp"
+        android:padding="10dp"
+        android:background="@drawable/input_shapes_crops_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
 
         <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="6dp"
+                android:layout_weight="0.3">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -37,26 +48,12 @@
                         android:id="@+id/txt_crop_contact_card_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
                         android:text="Georgia Tusiime"
-                        android:textColor="#696666"
-                        android:textSize="14dp" />
+                        android:textColor="#000"
+                        android:textSize="17sp" />
                 </LinearLayout>
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:gravity="end"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
-                    <ImageView
-                        android:id="@+id/img_crop_contact_card_more"
-                        android:layout_width="25dp"
-                        android:layout_height="20dp"
-                        android:layout_gravity="end"
-                        android:backgroundTint="@color/black"
-                        android:textColor="@color/darker_gray"
-                        android:src="@drawable/more_options_icon" />
 
-                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -78,8 +75,8 @@
                         android:layout_weight="1"
 
                         android:text="Breeder"
-                        android:textColor="#696666"
-                        android:textSize="14dp" />
+                        android:textColor="#899889"
+                        android:textSize="13sp" />
 
 
                 </LinearLayout>
@@ -100,10 +97,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Cabral Tech Ltd"
-                    android:textColor="#696666"
+                    android:textColor="#899889"
 
 
-                    android:textSize="14dp" />
+                    android:textSize="13sp" />
 
 
 
@@ -124,9 +121,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1762156"
-                    android:textColor="#696666"
+                    android:textColor="#899889"
 
-                    android:textSize="14dp" />
+                    android:textSize="13sp" />
 
 
 
@@ -152,8 +149,8 @@
                         android:layout_weight="1"
 
                         android:text="cabraltechltd@gmail.com"
-                        android:textColor="#696666"
-                        android:textSize="14dp" />
+                        android:textColor="#899889"
+                        android:textSize="13sp" />
 
 
                 </LinearLayout>
@@ -161,8 +158,40 @@
 
             </LinearLayout>
 
+            </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.4"
+                    android:padding="0dp">
+                    <ImageView
+                        android:layout_marginTop="12dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="0dp"
 
+                        android:src="@drawable/contact"
+                        />
 
+                </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:gravity="end"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.6"
+                >
+                <ImageView
+                    android:id="@+id/img_crop_contact_card_more"
+                    android:layout_width="25dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="end"
+                    android:backgroundTint="@color/black"
+                    android:textColor="@color/darker_gray"
+                    android:src="@drawable/more_options_icon" />
+
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+</LinearLayout>
 </LinearLayout>
