--- a/app/src/main/res/layout/crop_fertilizer_application_list_card.xml
+++ b/app/src/main/res/layout/crop_fertilizer_application_list_card.xml
@@ -74,15 +74,16 @@
                     android:gravity="center_vertical"
                     android:layout_margin="0dp"
                     android:padding="4dp">
+
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.9"
-                        android:textSize="18sp"
                         android:layout_marginStart="24dp"
-                        android:textAlignment="gravity"
+                        android:layout_weight="0.9"
                         android:text="Fertilizer Application"
-                        android:textColor="@color/blackText" />
+                        android:textAlignment="gravity"
+                        android:textColor="@color/blackText"
+                        android:textSize="18sp" />
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
