--- a/app/src/main/res/layout/crop_harvest_list_card.xml
+++ b/app/src/main/res/layout/crop_harvest_list_card.xml
@@ -57,7 +57,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:padding="10dp"
+                android:paddingStart="10dp"
+                android:paddingTop="10dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="20dp"
                 android:background="@drawable/input_shapes_crops_card"
                 android:orientation="vertical">
 
@@ -73,7 +76,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.9"
-                        android:layout_marginStart="24dp"
+                        android:layout_marginStart="28dp"
                         android:text="@string/harvest"
                         android:textColor="@color/blackText"
                         android:textSize="18sp" />
@@ -116,7 +119,7 @@
                         android:text="Method : "
                         android:textColor="@color/blackText"
                         android:textSize="14sp"
-                        android:layout_marginStart="28dp"
+                        android:layout_marginStart="38dp"
                         android:layout_weight="1"
                         />
 
@@ -125,6 +128,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginStart="6dp"
                         android:textColor="#899889"
                         android:text="Hand Picking"/>
 
@@ -140,9 +144,9 @@
                     >
 
                     <TextView
-                        android:layout_width="250dp"
+                        android:layout_width="221dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="28dp"
+                        android:layout_marginStart="38dp"
                         android:layout_weight="0.2"
                         android:text="Quantity : "
                         android:textColor="@color/blackText"
@@ -182,7 +186,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Status : "
-                        android:layout_marginStart="28dp"
+                        android:layout_marginStart="38dp"
                         android:textColor="@color/blackText"
                         />
 
@@ -191,6 +195,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginStart="6dp"
                         android:text="Sold"
                         android:textColor="#899889" />
                 </LinearLayout>
@@ -208,7 +213,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_marginStart="28dp"
+                        android:layout_marginStart="38dp"
                         android:text="Cost : "
                         android:textColor="@color/blackText"
                          />
@@ -218,6 +223,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginStart="6dp"
                         android:text="UGX 150,000"
                         android:textColor="#899889" />
                 </LinearLayout>
@@ -231,19 +237,21 @@
 
                     <TextView
 
-                        android:layout_width="match_parent"
+                        android:layout_width="300dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="38dp"
                         android:layout_weight="1"
-                        android:layout_marginStart="28dp"
-                        android:text="Income Generated : "
-                        android:textColor="@color/blackText"
-                        />
+                        android:paddingStart="0dp"
+                        android:paddingEnd="0dp"
+                        android:text="Income Generated :"
+                        android:textColor="@color/blackText" />
 
                     <TextView
                         android:id="@+id/txt_view_crop_harvest_card_income_generated"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+
                         android:text="UGX 150,000"
                         android:textColor="#899889" />
                 </LinearLayout>
