--- a/app/src/main/res/layout/crop_notes_list_card.xml
+++ b/app/src/main/res/layout/crop_notes_list_card.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#F4F4F4"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,12 +17,6 @@
             android:layout_weight="0.9"
             android:orientation="vertical">
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="16dp"
-                android:background="@color/black"
-                android:textAlignment="center" />
 
             <ImageView
                 android:layout_width="36dp"
@@ -34,7 +29,7 @@
                 android:layout_width="1dp"
                 android:layout_height="55dp"
                 android:layout_marginStart="16dp"
-                android:background="@color/black"
+                android:background="#E7EAE7"
                 android:textAlignment="center" />
 
         </LinearLayout>
@@ -42,66 +37,72 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="5dp"
             android:layout_weight="0.1"
             android:orientation="vertical">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-            <TextView
-                android:id="@+id/txt_view_crop_notes_card_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="20-08-2018"
-                android:textColor="@color/blackText" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="end"
-        android:layout_weight="0.1"
-        android:orientation="horizontal">
-
-
-        <ImageView
-            android:id="@+id/img_crop_notes_card_more"
-            android:layout_width="24dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/more_options_icon" />
-    </LinearLayout>
-</LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/crop_card_border"
                 android:orientation="vertical"
-                android:padding="4dp">
-
-               <LinearLayout
-                   android:id="@+id/layout_crop_notes_card_category"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:orientation="horizontal"
-                   android:visibility="gone">
-                <TextView
-                    android:id="@+id/txt_view_crop_notes_card_category"
-                    android:layout_width="wrap_content"
+                android:padding="15dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="Maintenance"
-                    android:textStyle="bold"
-                    android:textSize="18dp"
-                    android:textColor="@color/blackText"
-                    />
+                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.2"
+                        android:orientation="horizontal"
+                        >
+                        <TextView
+                            android:id="@+id/txt_view_crop_notes_card_date"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.6"
+                            android:textSize="14sp"
+                            android:text="20-08-2018"
+                            android:textColor="#A6C0A7" />
+                        <TextView
+                            android:id="@+id/txt_view_crop_notes_card_category"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.3"
+                            android:text="Maintenance"
+                            android:textSize="17dp"
+                            android:textColor="@color/blackText"
+                            android:visibility="invisible"
+                            />
 
-               </LinearLayout>
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="end"
+                        android:layout_weight="0.8"
+                        android:orientation="horizontal">
+
+
+                        <ImageView
+                            android:id="@+id/img_crop_notes_card_more"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:src="@drawable/more_options_icon" />
+                    </LinearLayout>
+                </LinearLayout>
+
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/black"
+                    android:background="#D2D3D2"
                     />
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -115,6 +116,7 @@
                         android:id="@+id/txt_view_crop_notes_card_notes"
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
+                        android:textSize="14sp"
                         android:inputType="textMultiLine"
                         android:text="The activity was serviced but still has some weakness "
                         android:textColor="@color/blackText"/>
