--- a/app/src/main/res/layout/crop_scouting_list_card.xml
+++ b/app/src/main/res/layout/crop_scouting_list_card.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray">
+    android:background="#F4F4F4">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,12 +16,7 @@
             android:layout_weight="0.9"
             android:orientation="vertical">
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="16dp"
-                android:background="@color/black"
-                android:textAlignment="center" />
+
 
             <ImageView
                 android:layout_width="36dp"
@@ -34,7 +29,7 @@
                 android:layout_width="1dp"
                 android:layout_height="135dp"
                 android:layout_marginStart="16dp"
-                android:background="@color/black"
+                android:background="#E7EAE7"
                 android:textAlignment="center" />
 
         </LinearLayout>
@@ -43,23 +38,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
+            android:paddingEnd="20dp"
+            android:paddingBottom="20dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txt_view_crop_scouting_card_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginBottom="8dp"
                 android:text="20-08-2018"
                 android:textSize="18sp"
-                android:textColor="@color/blackText" />
+                android:textColor="#A6C0A7" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:background="@drawable/black_border"
+                android:background="@drawable/crop_card_border"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -73,7 +70,8 @@
 
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="4dp"
+                        android:layout_marginEnd="4dp"
+                        android:layout_marginStart="24dp"
                         android:text="Scouting"
                         android:textSize="18sp"
                         android:layout_weight="0.9"
@@ -97,40 +95,37 @@
                     </LinearLayout>
                 </LinearLayout>
                 <View
-                    android:layout_width="match_parent"
+                    android:layout_width="240dp"
                     android:layout_height="1dp"
-                    android:background="@color/black"
-                    />
+                    android:layout_marginStart="20dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="#D2D3D2" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_margin="0dp"
-                    android:padding="8dp"
+                    android:padding="4dp"
                     >
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
+                        android:layout_weight="1"
+                        android:layout_marginStart="30dp"
                         android:text="Method : "
                         android:textColor="@color/blackText"
                         android:textSize="14sp" />
                     <TextView
                         android:id="@+id/txt_view_crop_scouting_card_method"
-                        android:layout_width="wrap_content"
-                        android:layout_weight="0.5"
+                        android:layout_width="match_parent"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/blackText"
+                        android:textColor="#899889"
                         android:text="Visual Observation"/>
 
 
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                    />
 
                 <LinearLayout
                     android:id="@+id/layout_crop_scouting_card_infestation"
@@ -139,13 +134,15 @@
                     android:orientation="horizontal"
                     android:visibility="gone"
                     android:layout_margin="0dp"
-                    android:padding="8dp"
+                    android:padding="4dp"
                     >
 
                     <TextView
                         android:id="@+id/txt_view_crop_scouting_card_infestation_type"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginStart="30dp"
                         android:text="Nematodes : "
                         android:textColor="@color/blackText"
                        android:textSize="14sp" />
@@ -154,14 +151,11 @@
                         android:id="@+id/txt_view_crop_scouting_card_infestation"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="None"
-                        android:textColor="@color/blackText" />
+                        android:textColor="#899889" />
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                    />
+
 
                 <LinearLayout
                     android:id="@+id/layout_crop_scouting_card_infestation_level"
@@ -170,13 +164,14 @@
                     android:orientation="horizontal"
                     android:visibility="gone"
                     android:layout_margin="0dp"
-                    android:padding="8dp"
+                    android:padding="4dp"
                     >
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:layout_weight="1"
+                        android:layout_marginStart="30dp"
                         android:text="Infestation Level : "
                         android:textColor="@color/blackText"
                        android:textSize="14sp" />
@@ -185,16 +180,12 @@
                         android:id="@+id/txt_view_crop_scouting_card_infestation_level"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:layout_weight="1"
                         android:text="None"
-                        android:textColor="@color/blackText" />
+                        android:textColor="#899889" />
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                    />
+
 
 
                 <LinearLayout
@@ -202,12 +193,14 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_margin="0dp"
-                    android:padding="8dp">
+                    android:padding="4dp">
 
                     <TextView
 
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:layout_weight="1"
                         android:text="Cost : "
                         android:textColor="@color/blackText"
                        android:textSize="14sp" />
@@ -217,34 +210,30 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="end"
                         android:text="UGX 150,000"
-                        android:textColor="@color/blackText" />
+                        android:textColor="#899889" />
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                    />
+
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:orientation="horizontal"
                     android:gravity="end"
                     android:padding="0dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_marginLeft="4dp"
+                    android:layout_margin="0dp"
                     android:id="@+id/layout_crop_scouting_card_show_hide"
-                    android:background="@color/gray"
-                    android:visibility="gone">
+                    android:background="#B6C5B6"
+                    >
 
                     <ImageView
                         android:id="@+id/img_crop_scouting_card_show_crops"
                         android:layout_width="15dp"
                         android:layout_height="15dp"
                         android:backgroundTint="@color/black"
-                        android:textColor="@color/darker_gray"
-                        android:gravity="end"
+                        android:textColor="#D2DDD5"
+                        android:layout_marginRight="18.17dp"
+                        android:layout_marginTop="10dp"
+
                         android:src="@drawable/arrow_drop_down" />
                 </LinearLayout>
                 <LinearLayout
@@ -252,9 +241,7 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/gray"
-                    android:layout_marginRight="4dp"
-                    android:layout_marginLeft="4dp"
+                    android:background="#B6C5B6"
                     android:visibility="gone">
 
 
