--- a/app/src/main/res/layout/crop_spraying_list_card.xml
+++ b/app/src/main/res/layout/crop_spraying_list_card.xml
@@ -58,7 +58,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:padding="10dp"
+                android:paddingTop="10dp"
+                android:paddingEnd="0dp"
+                android:paddingStart="0dp"
+                android:paddingBottom="0dp"
                 android:background="@drawable/input_shapes_crops_card"
                 android:orientation="vertical"
              >
@@ -96,7 +99,7 @@
                 <View
                     android:layout_width="240dp"
                     android:layout_height="1dp"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="25dp"
                     android:layout_marginBottom="5dp"
                     android:background="#D2D3D2" />
                 <LinearLayout
@@ -216,7 +219,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="W.C: "
+                        android:text="W.C : "
                         android:textSize="14sp"
                         android:layout_marginStart="35dp"
                         android:layout_weight="1"
@@ -236,7 +239,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_marginBottom="20dp"
-                    android:padding="2dp">
+                    android:padding="2dp"
+                    android:visibility="gone">
                     <TextView
 
                         android:layout_width="match_parent"
@@ -258,7 +262,45 @@
                         android:text="To Control Pests"
                         android:textColor="#899889" />
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_margin="0dp"
+                    >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:orientation="horizontal"
+                        android:gravity="end"
+                        android:padding="0dp"
+                        android:layout_margin="0dp"
+                        android:id="@+id/layout_crop_field_card_show_hide"
+                        android:background="#B6C5B6">
 
+                        <ImageView
+                            android:id="@+id/img_crop_fields_card_show_crops"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:backgroundTint="@color/black"
+                            android:textColor="#D2DDD5"
+                            android:layout_marginRight="18.17dp"
+                            android:layout_marginTop="10dp"
+
+                            app:srcCompat="@drawable/arrow_drop_down" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/layout_crop_field_expand"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#B6C5B6"
+                        android:visibility="gone"
+                        android:padding="4dp">
+
+
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
