--- a/app/src/main/res/layout/crop_task_list_card.xml
+++ b/app/src/main/res/layout/crop_task_list_card.xml
@@ -6,10 +6,11 @@
     android:layout_height="wrap_content">
     <LinearLayout
         android:orientation="vertical"
-        android:background="@color/white"
+        android:background="@drawable/input_shapes_crops_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp">
+        android:padding="0dp"
+        android:layout_margin="12dp">
 
 
 
@@ -24,14 +25,20 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                >
 
-
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="15dp">
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
+                    android:padding="6dp"
+                    android:layout_marginStart="6dp"
                     android:layout_marginTop="3dp">
 
                     <TextView
@@ -40,14 +47,14 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
                         android:text="Fertilizer Application"
-                        android:textColor="#696666"
+                        android:textColor="#76A76A"
                         android:textSize="16sp" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
                         android:text="("
-                        android:textColor="#696666"
+                        android:textColor="#76A76A"
                         android:textSize="16sp" />
                     <TextView
                         android:id="@+id/txt_crop_task_card_crop"
@@ -55,21 +62,21 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
                         android:text="Tomatoes"
-                        android:textColor="#696666"
+                        android:textColor="#76A76A"
                         android:textSize="16sp" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
                         android:text=")"
-                        android:textColor="#696666"
+                        android:textColor="#76A76A"
                         android:textSize="16sp" />
                     <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="right"
-                        android:layout_marginLeft="6dp"
+                        android:gravity="end"
+                        android:layout_marginStart="6dp"
                         >
 
 
@@ -91,18 +98,25 @@
 
 
                 </LinearLayout>
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:background="#D2D3D2"
+                    />
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
-                        android:layout_marginLeft="6dp"
+                        android:padding="4dp"
+                        android:layout_marginStart="6dp"
                         android:layout_marginTop="3dp"
                         android:orientation="horizontal">
 
@@ -113,8 +127,8 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="Application Of NPK"
-                            android:textColor="#696666"
-                            android:textSize="16dp" />
+                            android:textColor="#000"
+                            android:textSize="14sp" />
 
 
                     </LinearLayout>
@@ -126,12 +140,13 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:padding="4dp"
                         android:layout_marginLeft="6dp"
                         android:layout_marginTop="3dp"
                         android:orientation="horizontal">
@@ -140,9 +155,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Personnel :"
-                            android:textStyle="bold"
-                            android:textColor="#696666"
-                            android:textSize="14dp" />
+                            android:textColor="#000"
+                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/txt_crop_task_card_personnel"
@@ -163,12 +177,13 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:padding="4dp"
                         android:layout_marginLeft="6dp"
                         android:layout_marginTop="3dp"
                         android:orientation="horizontal">
@@ -177,9 +192,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Recurrence :"
-                            android:textStyle="bold"
-                            android:textColor="#696666"
-                            android:textSize="14dp" />
+                            android:textColor="#000"
+                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/txt_crop_task_card_recurrence"
@@ -197,6 +211,8 @@
 
 
                 </LinearLayout>
+                </LinearLayout>
+
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -210,7 +226,7 @@
                         android:text="Status :"
                         android:textColor="@color/whiteColor"
                         android:textStyle="bold"
-                        android:textSize="14dp" />
+                        android:textSize="15sp" />
 
 
 
@@ -234,7 +250,7 @@
                             android:text="Due Date :"
                             android:textColor="@color/whiteColor"
                             android:textStyle="bold"
-                            android:textSize="14dp"
+                            android:textSize="15sp"
                             android:layout_marginLeft="4dp"
                             android:layout_marginRight="4dp"/>
 
