--- a/app/src/main/res/layout/crops_list_card.xml
+++ b/app/src/main/res/layout/crops_list_card.xml
@@ -58,7 +58,7 @@
                                     android:textAllCaps="false"
                                     android:layout_weight="1"
                                     android:layout_marginStart="15dp"
-                                    android:layout_marginRight="15dp"/>
+                                    android:layout_marginEnd="15dp"/>
                                 <Button
                                     android:id="@+id/btn_crop_notes"
                                     android:layout_width="wrap_content"
